tests/fixtures/valid_programs/control_flow.cryo
namespace Main;

import IO from <io/stdio>;
import <core/types>;

// Control flow structures
function test_if_else() -> void {
    const x: int = 10;
    if (x > 5) {
        const result: int = x * 2;
    } else {
        const result: int = x + 1;
    }
    return;
}

function test_while_loop() -> void {
    mut counter: int = 0;
    while (counter < 5) {
        counter = counter + 1;
    }
    return;
}

function test_for_loop() -> void {
    for (mut i: int = 0; i < 5; i++) {
        const value: int = i * 2;
    }
    return;
}

function test_nested_loops() -> void {
    for (mut i: int = 0; i < 3; i++) {
        for (mut j: int = 0; j < 3; j++) {
            const product: int = i * j;
        }
    }
    return;
}

function main() -> int {
    test_if_else();
    test_while_loop();
    test_for_loop();
    test_nested_loops();
    return 0;
}