tests/fixtures/invalid_programs/scope_error.cryo
namespace Main;

// Semantic error: using variable out of scope
function main() -> int {
    {
        const inner_var: int = 42;
    }
    const x: int = inner_var; // inner_var is out of scope
    return 0;
}